--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container box_1620">
 						<!-- Brand and toggle get grouped for better mobile display -->
-						<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+						<a class="navbar-brand logo_h" href="index.html">Portfolio</a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -74,13 +74,13 @@
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
-									<h6>Hello Everybody, i am</h6>
+									<h6>Hello, I am</h6>
 									<h3>Devi Qurnia Sari</h3>
-									<h4>Junior Programmer Web</h4>
+									<h4>Junior Web Programmer</h4>
 									<p>You can call me Devi</p>
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 10st December, 1998</a></li>
-										<li><a href="#"><i class="lnr lnr-phone-handset"></i> (+62)89 51682 2164)</a></li>
+										<li><a href="#"><i class="lnr lnr-phone-handset"></i> (+62)89 51682 2164</a></li>
 										<li><a href="#"><i class="lnr lnr-envelope"></i> deviqurnia10@gmail.com</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i>Gang Pelopor, Jl. Jambu VII No.7, RT/RW.006/006</a></li>
 										<li><a href="#">Buaran Indah, Tangerang</li>
@@ -183,6 +183,22 @@
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+								</div>
+								<div class="skill_item">
+									<h4>GIT <span class="counter">90</span>%</h4>
+									<div class="progress_br">
+										<div class="progress">
+											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+								</div>
+								<div class="skill_item">
+									<h4>JAVA <span class="counter">70</span>%</h4>
+									<div class="progress_br">
+										<div class="progress">
+											<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
@@ -328,7 +344,7 @@
         				<div class="feature_item">
         					<i class="flaticon-city"></i>
         					<h4>PHP</h4>
-        					<p>I learn PHP since vocational high school. In the first time, i made absence application base website</p>
+        					<p>I learn PHP since i study in Vocational High School. In the first time, i made absence application base website</p>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
@@ -341,8 +357,43 @@
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
         					<i class="flaticon-sketch"></i>
-        					<h4>Concept Design</h4>
-        					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
+        					<h4>HTML</h4>
+        					<p>I Learn HTML sice i study in Vocational High School, in the first time i made simple system front end with native HTML</p>
+        				</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+        				<div class="feature_item">
+        					<i class="flaticon-sketch"></i>
+        					<h4>JavaScript</h4>
+        					<p>I Learn Javasript since i study in Vocational High School, i made simple system mix with HTML</p>
+        				</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+        				<div class="feature_item">
+        					<i class="flaticon-sketch"></i>
+        					<h4>CSS</h4>
+        					<p>I Learn CSS since i study in Vocational High School, in the first time i made simple system mix with HTML, Jacascript and PHP</p>
+        				</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+        				<div class="feature_item">
+        					<i class="flaticon-sketch"></i>
+        					<h4>MySQL</h4>
+        					<p>I Learn MySQL since i study in Vocational High School. Then i always upgrade my knowledge to make query optimitze. I use my knowledge to build database system in every project</p>
+        				</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+        				<div class="feature_item">
+        					<i class="flaticon-sketch"></i>
+        					<h4>GIT</h4>
+        					<p>I like git to colaborate my project, I can work with a team remotely. I have github (deviqurnia) and gitlab(deviqur) </p>
+        				</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+        				<div class="feature_item">
+        					<i class="flaticon-sketch"></i>
+        					<h4>Cisco Packet Trace</h4>
+        					<p>Besides programming I also like networking, because networking is a challenging and exciting thing</p>
         				</div>
         			</div>
         		</div>
@@ -354,15 +405,15 @@
         <section class="home_gallery_area p_120">
         	<div class="container">
         		<div class="main_title">
-        			<h2>Our Latest Featured Projects</h2>
-        			<p>Who are in extremely love with eco friendly system.</p>
+        			<h2>Portfolio System</h2>
+        			<p>My Latest Featured Projects</p>
         		</div>
         		<div class="isotope_fillter">
         			<ul class="gallery_filter list">
 						<li class="active" data-filter="*"><a href="#">All</a></li>
-						<li data-filter=".brand"><a href="#">Vector</a></li>
-						<li data-filter=".manipul"><a href="#">Raster</a></li>
-						<li data-filter=".creative"><a href="#">UI/UX</a></li>
+						<li data-filter=".brand"><a href="#">Esabak</a></li>
+						<li data-filter=".manipul"><a href="#">Ternak</a></li>
+						<li data-filter=".creative"><a href="#">I-Bills</a></li>
 						<li data-filter=".design"><a href="#">Printing</a></li>
 					</ul>
         		</div>
@@ -448,55 +499,6 @@
         	</div>
         </section>
         <!--================End Home Gallery Area =================-->
-        
-        <!--================Testimonials Area =================-->
-        <section class="testimonials_area p_120">
-        	<div class="container">
-        		<div class="main_title">
-        			<h2>Testimonials</h2>
-        			<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p>
-        		</div>
-        		<div class="testi_inner">
-					<div class="testi_slider owl-carousel">
-						<div class="item">
-							<div class="testi_item">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about it, you travel across her face</p>
-								<h4>Fanny Spencer</h4>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star-half-o"></i></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testi_item">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about it, you travel across her face</p>
-								<h4>Fanny Spencer</h4>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star-half-o"></i></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testi_item">
-								<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about it, you travel across her face</p>
-								<h4>Fanny Spencer</h4>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star"></i></a>
-								<a href="#"><i class="fa fa-star-half-o"></i></a>
-							</div>
-						</div>
-					</div>
-        		</div>
-        	</div>
-        </section>
-        <!--================End Testimonials Area =================-->
-        
         <!--================Footer Area =================-->
         <footer class="footer_area p_120">
         	<div class="container">
@@ -508,7 +510,7 @@
         					</div>
         					<p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills,</p>
         					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by Me
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
         				</aside>
         			</div>
