--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>MeetMe Personal</title>
+        <title>Devi Portfolio</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -76,15 +76,6 @@
 				<h2>Portfolio System</h2>
 				<p>My Latest Featured Projects</p>
 			</div>
-			<div class="isotope_fillter">
-				<ul class="gallery_filter list">
-					<li class="active" data-filter="*"><a href="#">All</a></li>
-					<li data-filter=".brand"><a href="#">Esabak</a></li>
-					<li data-filter=".manipul"><a href="#">Ternak</a></li>
-					<li data-filter=".creative"><a href="#">I-Bills</a></li>
-					<li data-filter=".design"><a href="#">Printing</a></li>
-				</ul>
-			</div>
 		</div>
 		<div class="container">
 			<div class="gallery_f_inner row imageGallery1">
@@ -95,8 +86,8 @@
 							<a class="light" href="img/gallery/project-1.jpg"><img src="img/gallery/icon.png" alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<h4>3D Helmet Design</h4>
-							<p>Client Project</p>
+							<h4><a href="http://esabak.com/">http://esabak.com/</a></h4>
+							<p>PT Razen Teknologi Indonesia</p>
 						</div>
 					</div>
 				</div>
@@ -107,8 +98,8 @@
 							<a class="light" href="img/gallery/project-2.jpg"><img src="img/gallery/icon.png" alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<h4>2D Vinyl Design</h4>
-							<p>Client Project</p>
+							<h4><a href="https://garagefarmjogja.com/"> Ternak Kambing</a></h4>
+							<p>PT Razen Teknologi Indonesia</p>
 						</div>
 					</div>
 				</div>
