--- a/portfolio.html
+++ b/portfolio.html
@@ -86,8 +86,8 @@
 							<a class="light" href="img/gallery/project-1.jpg"><img src="img/gallery/icon.png" alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<h4><a href="http://esabak.com/">http://esabak.com/</a></h4>
-							<p>PT Razen Teknologi Indonesia</p>
+							<h4><a href="http://esabak.com/">esabak.com</a></h4>
+							<p>PT Razen Teknologi Indonesia <br> http://esabak.com/</p>
 						</div>
 					</div>
 				</div>
@@ -99,7 +99,7 @@
 						</div>
 						<div class="g_item_text">
 							<h4><a href="https://garagefarmjogja.com/"> Ternak Kambing</a></h4>
-							<p>PT Razen Teknologi Indonesia</p>
+							<p>PT Razen Teknologi Indonesia <br> https://garagefarmjogja.com/</p>
 						</div>
 					</div>
 				</div>
@@ -110,50 +110,11 @@
 							<a class="light" href="img/gallery/project-3.jpg"><img src="img/gallery/icon.png" alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<h4>Creative Poster Design</h4>
-							<p>Client Project</p>
+							<h4>I-Bills</h4>
+							<p>PT Indonesia Comnents Plus</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 brand creative print">
-					<div class="h_gallery_item">
-						<div class="g_img_item">
-							<img class="img-fluid" src="img/gallery/project-4.jpg" alt="">
-							<a class="light" href="img/gallery/project-4.jpg"><img src="img/gallery/icon.png" alt=""></a>
-						</div>
-						<div class="g_item_text">
-							<h4>Embosed Logo Design</h4>
-							<p>Client Project</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design">
-					<div class="h_gallery_item">
-						<div class="g_img_item">
-							<img class="img-fluid" src="img/gallery/project-5.jpg" alt="">
-							<a class="light" href="img/gallery/project-5.jpg"><img src="img/gallery/icon.png" alt=""></a>
-						</div>
-						<div class="g_item_text">
-							<h4>3D Disposable Bottle</h4>
-							<p>Client Project</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 brand creative">
-					<div class="h_gallery_item">
-						<div class="g_img_item">
-							<img class="img-fluid" src="img/gallery/project-6.jpg" alt="">
-							<a class="light" href="img/gallery/project-6.jpg"><img src="img/gallery/icon.png" alt=""></a>
-						</div>
-						<div class="g_item_text">
-							<h4>3D Logo Design</h4>
-							<p>Client Project</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="more_btn">
-				<a class="main_btn" href="#">Load More Items</a>
 			</div>
 		</div>
 	</section>
