--- a/about-us.html
+++ b/about-us.html
@@ -90,10 +90,10 @@
 							 <li><a href="#">Buaran Indah, Tangerang</li>
 						 </ul>
 						 <ul class="list personal_social">
-							 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-						 </ul>
+							<li><a href="https://web.facebook.com/devi.qurniasari.9"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/deviqurniasari/"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/devi-qurnia-sari-a6b190181/"><i class="fa fa-linkedin"></i></a></li>
+						</ul>
 					 </div>
 				 </div>
 			 </div>
@@ -260,11 +260,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         						<h3>Follow Me</h3>
         					</div>
         					<p>Let us be social</p>
-        					<ul class="list">
-        						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        						<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-        						<li><a href="#"><i class="fa fa-behance"></i></a></li>
+							<ul class="list">
+        						<li><a href="https://web.facebook.com/devi.qurniasari.9"><i class="fa fa-facebook"></i></a></li>
+        						<li><a href="https://www.instagram.com/deviqurniasari/"><i class="fa fa-instagram"></i></a></li>
         					</ul>
         				</aside>
         			</div>
