--- a/portfolio.html
+++ b/portfolio.html
@@ -158,11 +158,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         						<h3>Follow Me</h3>
         					</div>
         					<p>Let us be social</p>
-        					<ul class="list">
-        						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        						<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-        						<li><a href="#"><i class="fa fa-behance"></i></a></li>
+							<ul class="list">
+        						<li><a href="https://web.facebook.com/devi.qurniasari.9"><i class="fa fa-facebook"></i></a></li>
+        						<li><a href="https://www.instagram.com/deviqurniasari/"><i class="fa fa-instagram"></i></a></li>
         					</ul>
         				</aside>
         			</div>
