--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 										<li><a href="#">Buaran Indah, Tangerang</li>
 									</ul>
 									<ul class="list personal_social">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+										<li><a href="https://web.facebook.com/devi.qurniasari.9"><i class="fa fa-facebook"></i></a></li>
+										<li><a href="https://www.instagram.com/deviqurniasari/"><i class="fa fa-instagram"></i></a></li>
+										<li><a href="https://www.linkedin.com/in/devi-qurnia-sari-a6b190181/"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
 							</div>
@@ -477,10 +477,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         					</div>
         					<p>Let us be social</p>
         					<ul class="list">
-        						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        						<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-        						<li><a href="#"><i class="fa fa-behance"></i></a></li>
+        						<li><a href="https://web.facebook.com/devi.qurniasari.9"><i class="fa fa-facebook"></i></a></li>
+        						<li><a href="https://www.instagram.com/deviqurniasari/"><i class="fa fa-instagram"></i></a></li>
         					</ul>
         				</aside>
         			</div>
