--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<li><a href="#"><i class="lnr lnr-phone-handset"></i> (+62)89 51682 2164</a></li>
 										<li><a href="#"><i class="lnr lnr-envelope"></i> deviqurnia10@gmail.com</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i>Gang Pelopor, Jl. Jambu VII No.7, RT/RW.006/006</a></li>
-										<li><a href="#">Buaran Indah, Tangerang</li>
+										<li><a href="https://github.com/deviqur"><i class="fa fa-github"></i>@deviqur or @deviqurnia</i></a></li>
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="https://web.facebook.com/devi.qurniasari.9"><i class="fa fa-facebook"></i></a></li>
@@ -478,7 +478,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         					<p>Let us be social</p>
         					<ul class="list">
         						<li><a href="https://web.facebook.com/devi.qurniasari.9"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="https://www.instagram.com/deviqurniasari/"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="https://www.instagram.com/deviqurniasari/"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="https://github.com/deviqur"><i class="fa fa-github"></i></a></li>
         					</ul>
         				</aside>
         			</div>
