--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         					<p>Let us be social</p>
                             <ul class="list">
         						<li><a href="https://web.facebook.com/devi.qurniasari.9"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="https://www.instagram.com/deviqurniasari/"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="https://www.instagram.com/deviqurniasari/"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="https://github.com/deviqur"><i class="fa fa-github"></i></a></li>
         					</ul>
         				</aside>
         			</div>
