--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 									<h4>Junior Web Programmer</h4>
 									<p>You can call me Devi</p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 10st December, 1998</a></li>
-										<li><a href="#"><i class="lnr lnr-phone-handset"></i> (+62)89 51682 2164</a></li>
+										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 10th December, 1998</a></li>
+										<li><a href="#"><i class="lnr lnr-phone-handset"></i> +62 895 1682 2164</a></li>
 										<li><a href="#"><i class="lnr lnr-envelope"></i> deviqurnia10@gmail.com</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i>Gang Pelopor, Jl. Jambu VII No.7, RT/RW.006/006</a></li>
 										<li><a href="https://github.com/deviqur"><i class="fa fa-github"></i>@deviqur or @deviqurnia</i></a></li>
@@ -93,16 +93,15 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>Iam a women 21 years old. I always happy and humble to anyone. I like traveling to refresh my self. Iam passionate and
-								enthusiastic learner, especsially system analisys and website programmer.</p>
-							<p>I'm a newbie in everything but keep improving myself in those elds of development.</p>
+        					<p>Enthusiastic learner, especially Testing System and system analysis, also website programmer PHP.</p>
+							<p>I'm keep improving myself in fields of testing product.</p>
 							<p>I love to learn new skills, happy join in team, getting to know more people and share everything I know to the another person</p>
         					<div class="row">
         						<div class="col-md-4">
         							<div class="wel_item">
         								<i class="lnr lnr-database"></i>
         								<h4>80%</h4>
-        								<p>ExperienceOrganization</p>
+        								<p>Experience Organization</p>
         							</div>
         						</div>
         						<div class="col-md-4">
@@ -224,11 +223,23 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
+											<p>November 2020 to October 2021</p>
+										</div>
+										<div class="media-body">
+											<h4>PT Tokopedia-Palu Bisnis Service</h4>
+											<p>I am as Quality Assurance for Tokopedia by Palu Bisnis Service (As a Tokopedia partner). At Tokopedia I create test cases, run test cases, explore new features through figma, report bugs in jira, debug with stake holders, overcommunicate with stack holders, sometimes I also become a triage MC.<br />Jakarta</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
 											<p>December 2019 to July 2020</p>
 										</div>
 										<div class="media-body">
 											<h4>PT Indonesia Comnets Plus</h4>
-											<p>Intership as IT Programmer, Made Company Revenue Projection Information System
+											<p>Internship as IT Programmer, Made Company Revenue Projection Information System
 												Information (web base) <br />Cawang, West Jakarta, DKI Jakarta</p>
 										</div>
 									</div>
@@ -241,20 +252,20 @@
 										</div>
 										<div class="media-body">
 											<h4>PT Razen Teknologi Indonesia</h4>
-											<p>Freelancer Programmer PHP, Made Rest API for user esabak.com
+											<p>Freelance Programmer PHP, Made Rest API for user esabak.com
 												http://esabak.com/ and Animal Livestock Information System
-												(Mostly admin modul)<br />Santa monica, Los angeles</p>
+												(Mostly admin modul)<br />Yogyakarta, DIY</p>
 										</div>
 									</div>
 								</li>
 								<li>
-								<span></span>
+									<span></span>
 									<div class="media">
 										<div class="d-flex">
 											<p>July 2019 to Augst 2019</p>
 										</div>
 										<div class="media-body">
-											<h4>Intership</h4>
+											<h4>Internship</h4>
 											<p>Asistance Administration server centos 7<br /> Yogyakarta, DIY</p>
 										</div>
 									</div>
@@ -324,7 +335,7 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>My Skills</h2>
-        			<p>I love to leran new skills</p>
+        			<p>I love to learn new skills</p>
         		</div>
         		<div class="feature_inner row">
         			<div class="col-lg-4 col-md-6">
@@ -345,7 +356,7 @@
         				<div class="feature_item">
         					<i class="flaticon-sketch"></i>
         					<h4>HTML</h4>
-        					<p>I Learn HTML sice i study in Vocational High School, in the first time i made simple system front end with native HTML</p>
+        					<p>I Learn HTML since i study in Vocational High School, in the first time i made simple system front end with native HTML</p>
         				</div>
 					</div>
 					<div class="col-lg-4 col-md-6">
@@ -430,7 +441,7 @@
 						</div>
 						<div class="g_item_text">
 							<h4>I-Bills</h4>
-							<p>PT Indonesia Comnents Plus</p>
+							<p>PT Indonesia Comnets Plus</p>
 						</div>
 					</div>
 				</div>
